added basic styles

--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
         <!-- custom styles -->
         <link rel="stylesheet" href="styles/styles.css">
         <!-- fonts -->
+        <!-- google fonts for headers -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&family=Zilla+Slab:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
+
+        <!-- google fonts for default body fonts -->
     </head>
-    <body>
+    <body id="top">
         <header>
             <nav class="site-nav">
                 <ul>
-                    <li><a href="#home"><img></a></li>
+                    <li><a href="#top"><img src="">home</a></li>
                     <li><a href="#about">who?</a></li>
                     <li><a href="#projects">what?</a></li>
                     <li><a href="#contact">link up</a></li>
@@ -21,16 +27,46 @@
         </header>
         <main>
             <section id="home">
+                <div>
+                    <header>
+                        <h1>hello.</h1>
+                        <p>can you hear me? good. now you can check out my site and see for yourself.</p>
+                    </header>
+                </div>
 
+                <div></div>
             </section>
+
             <section id="about">
+                <div>
+                    <header>
+                        <h2>who am i?</h2>
+                    </header>
+                </div>
 
+                <div class="slider"></div>
             </section>
+
             <section id="projects">
+                <div>
+                    <header>
+                        <h2>what have i done?</h2>
+                    </header>
+                </div>
+
+                <div></div>
 
             </section>
+
             <section id="contact">
-                
+                <div>
+                    <header>
+                        <h2>link up with me</h2>
+                    </header>
+                    <div>
+
+                    </div>
+                </div>
             </section>
         </main>
         <footer></footer>
