--- a/index.html
+++ b/index.html
@@ -5,23 +5,40 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <!-- <meta description> -->
         <!-- custom styles -->
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="scss/styles.css">
         <!-- fonts -->
-        <!-- google fonts for headers -->
+        <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&family=Zilla+Slab:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
+        <!-- google icons -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-        <!-- google fonts for default body fonts -->
     </head>
     <body id="top">
         <header id="main-header">
             <nav class="site-nav">
                 <ul>
                     <li><a href="#top"><img src="">home</a></li>
-                    <li><a href="#about">who?</a></li>
-                    <li><a href="#projects">what?</a></li>
-                    <li><a href="#contact">link up</a></li>
+                    <li><a href="#about">
+                        <span class="material-symbols-outlined">
+                        arrow_downward_alt
+                        </span>
+                        who?</a>
+                    </li>
+                    <li><a href="#projects">
+                        <span class="material-symbols-outlined">
+                        arrow_downward_alt
+                        </span>
+                        what?</a>
+                    </li>
+                    <li>
+                        <a href="#contact">
+                        <span class="material-symbols-outlined">
+                        arrow_downward_alt
+                        </span>
+                        link up</a>
+                    </li>
                 </ul>
             </nav>
         </header>
