added slider interactivity and simple styling to be corrected

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <!-- google icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+        <!-- scripts -->
+        <script defer src="./scripts/slider.js"></script>
     </head>
     <body id="top">
-        <header id="main-header">
+        <header class="main-header" id="main-header">
             <nav class="site-nav">
                 <ul>
                     <li><a href="#top"><img src="">home</a></li>
@@ -43,7 +45,7 @@
             </nav>
         </header>
         <main>
-            <section id="home">
+            <div id="home">
                 <div>
                     <header>
                         <h1>hello.</h1>
@@ -54,24 +56,36 @@
                 </div>
 
                 <div></div>
-            </section>
+            </div>
 
-            <section id="about">
+            <div id="about">
                 <div class="slider-container">
 
                     <div class="my-slides fade">
-                        <h2>who am i?</h2>
-                        <div class="about-text">I'm a front-end web developer with background in 3D modeling.</div>
+                        <div class="about-header">
+                            <h2>who am i?</h2>
+                        </div>
+                        <div class="about-text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
+                        </div>
                     </div>
 
                     <div class="my-slides fade">
-                        <h2>what are my skills?</h2>
-                        <div class="about-text"></div>
+                        <div class="about-header">
+                            <h2>what are my skills?</h2>
+                        </div>
+                        <div class="about-text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
+                        </div>
                     </div>
 
                     <div class="my-slides fade">
-                        <h2>...and interests?</h2>
-                        <div class="about-text"></div>
+                        <div class="about-header">
+                            <h2>...and interests?</h2>
+                        </div>
+                        <div class="about-text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
+                        </div>
                     </div>
 
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -79,9 +93,9 @@
 
                 </div>
 
-            </section>
+            </div>
 
-            <section id="projects">
+            <div id="projects">
                 <div>
                     <header>
                         <h2>what have i done?</h2>
@@ -90,9 +104,9 @@
 
                 <div></div>
 
-            </section>
+            </div>
 
-            <section id="contact">
+            <div id="contact">
                 <div>
                     <header>
                         <h2>link up with me</h2>
@@ -101,7 +115,7 @@
 
                     </div>
                 </div>
-            </section>
+            </div>
         </main>
         <footer></footer>
     </body>
