--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             </div>
 
             <div id="about">
+                <div class="arrows-right-div">
+                    <h1 class="arrows-right">&#10095; &#10095; &#10095; &#10095; &#10095;</h1>
+                </div>
+                
                 <div class="slider-container">
 
                     <div class="my-slides fade">
@@ -91,6 +95,10 @@
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
+                </div>
+
+                <div class="arrows-right-div">
+                    <h1 class="arrows-right">&#10095; &#10095; &#10095; &#10095; &#10095;</h1>
                 </div>
 
             </div>
