--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <div id="about">
                 <div class="arrows-right-div">
-                    <h1 class="arrows-right">&#10095; &#10095; &#10095; &#10095; &#10095;</h1>
+                    <h1 class="arrows-right">> > > > ></h1>
                 </div>
                 
                 <div class="slider-container">
@@ -92,13 +92,13 @@
                         </div>
                     </div>
 
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <a class="prev" onclick="plusSlides(-1)"> < </a>
+                    <a class="next" onclick="plusSlides(1)"> > </a>
 
                 </div>
 
                 <div class="arrows-right-div">
-                    <h1 class="arrows-right">&#10095; &#10095; &#10095; &#10095; &#10095;</h1>
+                    <h1 class="arrows-right">> > > > ></h1>
                 </div>
 
             </div>
