tried adding animated background, not working

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <!-- <meta description> -->
+        <!-- meta description -->
         <!-- custom styles -->
         <link rel="stylesheet" href="scss/styles.css">
         <!-- fonts -->
@@ -16,12 +16,14 @@
 
         <!-- scripts -->
         <script defer src="./scripts/slider.js"></script>
+        <script defer src="./scripts/bg-anim.js"></script>
     </head>
     <body id="top">
+        <section></section>
         <header class="main-header" id="main-header">
             <nav class="site-nav">
                 <ul>
-                    <li><a href="#top"><img src="">home</a></li>
+                    <li><a href="#top"><img src="./images/logo-001-menu.png" id="menu-home-logo"></a></li>
                     <li><a href="#about">
                         <span class="material-symbols-outlined">
                         arrow_downward_alt
