added swiper bundle, added content and images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <!-- meta description -->
+        <!-- favicons -->
+        <link rel="icon" href="favicon.ico" sizes="any"> 
+        <link rel="icon" href="favicon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
+        <link rel="manifest" href="site.webmanifest" />
         <!-- custom styles -->
         <link rel="stylesheet" href="scss/styles.css">
         <!-- fonts -->
@@ -19,7 +24,7 @@
         <script defer src="./scripts/bg-anim.js"></script>
     </head>
     <body id="top">
-        <section></section>
+
         <header class="main-header" id="main-header">
             <nav class="site-nav">
                 <ul>
@@ -48,6 +53,9 @@
         </header>
         <main>
             <div id="home">
+                <header class="top-header-home">
+                    <h1><a href="index.html">Oliwia Wegner</a></h1>
+                </header>
                 <div>
                     <header>
                         <h1>hello.</h1>
@@ -114,22 +122,22 @@
 
                 <div class="gallery">
                     <div class="project" id="project-1">
-                        <img src="#">
                         <a href="single-project-1.html">
-                            <h2>Project 1</h2>
+                            <img src="./images/sm-home-desktop.png">
+                            <h2>SuperMovies Database</h2>
                         </a>
                     </div>
 
                     <div class="project" id="project-2">
-                        <img src="#">
                         <a href="#">
+                            <img src="#">
                             <h2>Project 2</h2>
                         </a>
                     </div>
 
                     <div class="project" id="project-3">
-                        <img src="#">
                         <a href="#">
+                            <img src="#">
                             <h2>Project 3</h2>
                         </a>
                     </div>
