set up code for the background, to be finished

--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
 
         <!-- scripts -->
         <script defer src="./scripts/slider.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
         <script defer src="./scripts/bg-anim.js"></script>
     </head>
     <body id="top">
+        <header class="top-header-home">
+            <h1><a href="index.html">Oliwia Wegner</a></h1>
+        </header>
 
+        <div id="bg">
+        </div>
+        
         <header class="main-header" id="main-header">
             <nav class="site-nav">
                 <ul>
@@ -53,9 +60,7 @@
         </header>
         <main>
             <div id="home">
-                <header class="top-header-home">
-                    <h1><a href="index.html">Oliwia Wegner</a></h1>
-                </header>
+                
                 <div>
                     <header>
                         <h1>hello.</h1>
@@ -124,21 +129,21 @@
                     <div class="project" id="project-1">
                         <a href="single-project-1.html">
                             <img src="./images/sm-home-desktop.png">
-                            <h2>SuperMovies Database</h2>
+                            <h3>SuperMovies Database</h3>
                         </a>
                     </div>
 
                     <div class="project" id="project-2">
                         <a href="#">
                             <img src="#">
-                            <h2>Project 2</h2>
+                            <h3>Project 2</h3>
                         </a>
                     </div>
 
                     <div class="project" id="project-3">
                         <a href="#">
                             <img src="#">
-                            <h2>Project 3</h2>
+                            <h3>Project 3</h3>
                         </a>
                     </div>
                 </div>
