animated background is working, swiper slider isn't on the about section

--- a/single-project-1.html
+++ b/single-project-1.html
@@ -28,6 +28,14 @@
         <header class="top-header">
             <h1><a href="index.html">Oliwia Wegner</a></h1>
         </header>
+
+        <div class="bg-animation">
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+            <div id="stars4"></div>
+        </div>
+        
         <header class="main-header" id="main-header">
             <nav class="site-nav">
                 <ul>
@@ -89,19 +97,19 @@
             <div class="project-info">
                 <div>
                     <h3>What was my role in the project?</h3>
-                    <p>I filled in the roles of Web Designer, UX/UI Designer and Web Developer. The database is coded using React JS and the data is fetched from The Movie Database API.</p>
+                    <p>I filled in the roles of Web Designer, UX/UI Designer and Web Developer. The database is coded using React JS and the data is fetched from The Movie Database API. The styling was done with SASS.</p>
                 </div>
                 <div>
                     <h3>What was the process?</h3>
-                    <p>At first I drew low-fidelity wireframe on paper to get a sense of where to place the images and sliders. Then I went on to create a high-fidelity mockup in Adobe Photoshop and a working prototype in Adobe XD.</p>
-                    <p>The next step was to set up the project in React JS. After that I started coding.</p>
-                    <p>To be fair, it was quite a challenge, there were many hiccups along the way, such as not being able to connect to the API at first. Fortunately, after that I managed to quite easily fetch the desired data.</p>
+                    <p>At first I drew low-fidelity wireframes on paper to get a sense of where to place the images and sliders. Then I went on to create a high-fidelity mockup in Adobe Photoshop and a working prototype in Adobe XD.</p>
+                    <p>The next step was to set up the project in React JS. [Say what files i decided to go with eventually]</p>
+                    <p>To be fair, it was quite a challenge, there were many hiccups along the way, such as not being able to connect to the API at first. Fortunately, after that, I managed to quite easily fetch the desired data.</p>
                     <p></p>
                 </div>
                 <div>
                     <h3>What have I learned?</h3>
                     <p>I have learned how to work with APIs and how to make React components interact with each other.</p>
-                    <p>I also gained a lot of confidence in working with frameworks with which I'm unfamiliar.</p>
+                    <p>I also gained a lot of confidence in working with frameworks with which I'm unfamiliar. Now, even if I have to complete a project using an unknown framework, language or library, I don't feel nearly as intimidated as I used to.</p>
                 </div>
                 
             </div>
