--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
         <!-- scripts -->
-        <script defer src="./scripts/slider.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
-        <script defer src="./scripts/bg-anim.js"></script>
+        <script defer src="./scripts/swiper.js"></script>
+
     </head>
     <body id="top">
         <header class="top-header-home">
             <h1><a href="index.html">Oliwia Wegner</a></h1>
         </header>
 
-        <div id="bg">
+
+        <div class="bg-animation">
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+            <div id="stars4"></div>
         </div>
         
         <header class="main-header" id="main-header">
@@ -78,38 +82,26 @@
                     <h1 class="arrows-right">> > > > ></h1>
                 </div>
                 
-                <div class="slider-container">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
 
-                    <div class="my-slides fade">
-                        <div class="about-header">
+                        <div class="swiper-slide">
                             <h2>who am i?</h2>
-                        </div>
-                        <div class="about-text">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
                         </div>
-                    </div>
-
-                    <div class="my-slides fade">
-                        <div class="about-header">
-                            <h2>what are my skills?</h2>
-                        </div>
-                        <div class="about-text">
+                        <!-- <div class="swiper-slide">
+                            <h2>what can i do?</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
                         </div>
-                    </div>
-
-                    <div class="my-slides fade">
-                        <div class="about-header">
-                            <h2>...and interests?</h2>
-                        </div>
-                        <div class="about-text">
+                        <div class="swiper-slide">
+                            <h2>what are my interests?</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
-                        </div>
+                        </div> -->
+
                     </div>
-
-                    <a class="prev" onclick="plusSlides(-1)"> < </a>
-                    <a class="next" onclick="plusSlides(1)"> > </a>
-
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <!-- <div class="swiper-scrollbar"></div> -->
                 </div>
 
                 <div class="arrows-right-div">
@@ -169,6 +161,7 @@
                     </div>
                 </div>
             </div>
+
         </main>
         <footer></footer>
     </body>
