--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <!-- google icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+        <!-- swiper bundle stylesheet -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <!-- scripts -->
+        <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script defer src="./scripts/swiper.js"></script>
 
     </head>
@@ -86,22 +89,25 @@
                     <div class="swiper-wrapper">
 
                         <div class="swiper-slide">
-                            <h2>who am i?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
-                        </div>
-                        <!-- <div class="swiper-slide">
-                            <h2>what can i do?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
+                            <div class="container">
+                                <h2>who am i?</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
+                            </div>
                         </div>
                         <div class="swiper-slide">
-                            <h2>what are my interests?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
-                        </div> -->
+                            <div class="container">
+                                <h2>what can i do?</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="container">
+                                <h2>what are my interests?</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p>
+                            </div>
+                        </div>
 
                     </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <!-- <div class="swiper-scrollbar"></div> -->
                 </div>
 
                 <div class="arrows-right-div">
@@ -111,7 +117,7 @@
             </div>
 
             <div id="projects">
-                <div>
+                <div class="header-div">
                     <header>
                         <h2>what have i done?</h2>
                     </header>
@@ -126,16 +132,16 @@
                     </div>
 
                     <div class="project" id="project-2">
-                        <a href="#">
-                            <img src="#">
-                            <h3>Project 2</h3>
+                        <a href="single-project-1.html">
+                            <img src="./images/sm-home-desktop.png">
+                            <h3>Pet Retreat Wordpress Site</h3>
                         </a>
                     </div>
 
                     <div class="project" id="project-3">
-                        <a href="#">
-                            <img src="#">
-                            <h3>Project 3</h3>
+                        <a href="single-project-1.html">
+                            <img src="./images/sm-home-desktop.png">
+                            <h3>Fashion Design Portfolio</h3>
                         </a>
                     </div>
                 </div>
@@ -149,13 +155,13 @@
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet nulla facilisi morbi tempus iaculis urna. Sed viverra tellus in hac habitasse. Proin libero nunc consequat interdum varius sit. Tellus orci ac auctor augue. Eget lorem dolor sed viverra ipsum nunc aliquet. Vel facilisis volutpat est velit egestas dui id ornare arcu. Adipiscing elit ut aliquam purus. Nisl suscipit adipiscing bibendum est ultricies integer quis. Amet consectetur adipiscing elit duis tristique.</p> -->
                     </header>
                     <div class="social-icons">
-                        <a href="#">
+                        <a href="#" id="icon-1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><path fill="currentColor" d="M5 2h4v2H7v2H5zm0 10H3V6h2zm2 2H5v-2h2zm2 2v-2H7v2H3v-2H1v2h2v2h4v4h2v-4h2v-2zm0 0v2H7v-2zm6-12v2H9V4zm4 2h-2V4h-2V2h4zm0 6V6h2v6zm-2 2v-2h2v2zm-2 2v-2h2v2zm0 2h-2v-2h2zm0 0h2v4h-2z"/></svg>
                         </a>
-                        <a href="#">
+                        <a href="#" id="icon-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><path fill="currentColor" d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037c-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85c3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.06 2.06 0 0 1-2.063-2.065a2.064 2.064 0 1 1 2.063 2.065m1.782 13.019H3.555V9h3.564zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0z"/></svg>
                         </a>
-                        <a href="#">
+                        <a href="#" id="icon-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 22 22"><path fill="currentColor" d="M1 5h1V4h18v1h1v13h-1v1H2v-1H1zm2 12h16V9h-1v1h-2v1h-2v1h-2v1h-2v-1H8v-1H6v-1H4V9H3zM19 6H3v1h2v1h2v1h2v1h4V9h2V8h2V7h2z"/></svg>
                         </a>
                     </div>
