styled the home page better

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&family=Zilla+Slab:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
         <!-- google icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+        <!-- icons -->
+        <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
         <!-- swiper bundle stylesheet -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <!-- scripts -->
@@ -27,10 +28,6 @@
 
     </head>
     <body id="top">
-        <header class="top-header-home">
-            <h1><a href="index.html">Oliwia Wegner</a></h1>
-        </header>
-
 
         <div class="bg-animation">
             <div id="stars"></div>
@@ -70,10 +67,37 @@
                 
                 <div>
                     <header>
-                        <h1>hello.</h1>
-                        <p>can you hear me? good!</p>
-                        <p>welcome to my intergalactic spaceship.</p>
-                        <p>follow the nav on the bottom to explore the different compartments!</p>
+                        <div class="welcome">
+                            <h1>Welcome!</h1>
+                        </div>
+                        <!-- code frmo https://codepen.io/amit_sheen/pen/mdmJNYz -->
+                        <div class="platform">
+                            <div class="plate"></div>
+                            <div class="plate"></div>
+                            <div class="panels">
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                              <div class="panel"></div>
+                            </div>
+                          </div>
+
+                          <div class="home-text">
+                            <p>Thank you for visiting.</p>
+                            <p>You can navigate the site by using the menu below.</p>
+                          </div>
                     </header>
                 </div>
 
@@ -126,22 +150,36 @@
                 <div class="gallery">
                     <div class="project" id="project-1">
                         <a href="single-project-1.html">
-                            <img src="./images/sm-home-desktop.png">
+                            <img src="./images/sm-home-desktop.png" alt="project image" loading="lazy">
+                            <p>
+                                <i class="devicon-react-original-wordmark"></i>
+                                <i class="devicon-sass-original colored"></i>
+                            </p>
                             <h3>SuperMovies Database</h3>
                         </a>
                     </div>
 
                     <div class="project" id="project-2">
                         <a href="single-project-1.html">
-                            <img src="./images/sm-home-desktop.png">
+                            <img src="./images/sm-home-desktop.png" alt="project image" loading="lazy">
+                            <p>
+                                <i class="devicon-wordpress-plain-wordmark"></i>
+                                <i class="devicon-sass-original colored"></i>
+                                <i class="devicon-javascript-plain"></i>
+                            </p>
                             <h3>Pet Retreat Wordpress Site</h3>
                         </a>
                     </div>
 
                     <div class="project" id="project-3">
                         <a href="single-project-1.html">
-                            <img src="./images/sm-home-desktop.png">
-                            <h3>Fashion Design Portfolio</h3>
+                            <img src="./images/sm-home-desktop.png" alt="project image" loading="lazy">
+                            <p>
+                                <i class="devicon-html5-plain-wordmark"></i>
+                                <i class="devicon-sass-original colored"></i>
+                                <i class="devicon-javascript-plain"></i>
+                            </p>
+                            <h3>Portfolio Website</h3>
                         </a>
                     </div>
                 </div>
