--- a/index.html
+++ b/index.html
@@ -207,6 +207,6 @@
             </div>
 
         </main>
-        <footer></footer>
+        <footer>2024 &copy; Oliwia Wegner</footer>
     </body>
 </html>
