small changes to the content

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                 <div class="gallery">
                     <div class="project" id="project-1">
-                        <a href="single-project-1.html">
+                        <a href="project-1.html">
                             <img src="./images/sm-home-desktop.png" alt="project image" loading="lazy">
                             <p>
                                 <i class="devicon-react-original-wordmark"></i>
@@ -192,8 +192,8 @@
                         </a>
                     </div>
 
-                    <div class="project" id="project-2">
-                        <a href="single-project-2.html">
+                    <!-- <div class="project" id="project-2">
+                        <a href="project-2.html">
                             <img src="./images/petretreat-img/homepage-desktop.png" alt="project image" loading="lazy">
                             <p>
                                 <i class="devicon-wordpress-plain-wordmark"></i>
@@ -202,10 +202,10 @@
                             </p>
                             <h3>Pet Retreat Site</h3>
                         </a>
-                    </div>
+                    </div> -->
 
                     <div class="project" id="project-3">
-                        <a href="single-project-3.html">
+                        <a href="project-3.html">
                             <img src="./images/portfolio-img/single-project-desktop.png" alt="project image" loading="lazy">
                             <p>
                                 <i class="devicon-html5-plain-wordmark"></i>
