--- a/project-3.html
+++ b/project-3.html
@@ -143,12 +143,12 @@
               
             <div class="project-nav">
                 <div class="previous-project">
-                    <a href="single-project-2.html"><h3>Previous:</h3> Paws & Perfection Pet Retreat</a>
+                    <a href="project-1.html"><h3>Previous:</h3> SuperMovies Database</a>
                 </div>
                   
-                <div class="next-project">
+                <!-- <div class="next-project">
                     <a href="single-project-1.html"><h3>Next:</h3> SuperMovies DB</a>
-                </div>
+                </div> -->
             </div>
 
             <div id="contact">
