--- a/project-1.html
+++ b/project-1.html
@@ -96,10 +96,10 @@
             </div>
 
             <div class="project-links">
-                <a href="#" target="_blank" rel="noopener noreferrer">
+                <a id ="github" href="https://github.com/supercheese99/database" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><path fill="currentColor" d="M5 2h4v2H7v2H5zm0 10H3V6h2zm2 2H5v-2h2zm2 2v-2H7v2H3v-2H1v2h2v2h4v4h2v-4h2v-2zm0 0v2H7v-2zm6-12v2H9V4zm4 2h-2V4h-2V2h4zm0 6V6h2v6zm-2 2v-2h2v2zm-2 2v-2h2v2zm0 2h-2v-2h2zm0 0h2v4h-2z"/></svg>
                 </a>
-                <a href="#" target="_blank" rel="noopener noreferrer">
+                <a id="live-site" href="https://oliwiawdesign.com/SuperMovies" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" height="4em" viewBox="0 -960 960 960" width="4em" fill="#ACD6F5"><path d="m380-340 280-180-280-180v360Zm-60 220v-80H160q-33 0-56.5-23.5T80-280v-480q0-33 23.5-56.5T160-840h640q33 0 56.5 23.5T880-760v480q0 33-23.5 56.5T800-200H640v80H320ZM160-280h640v-480H160v480Zm0 0v-480 480Z"/></svg>
                 </a>
             </div>
@@ -150,12 +150,12 @@
               </div>
 
             <div class="project-nav">
-                <div class="previous-project">
+                <!-- <div class="previous-project">
                     <a href="single-project-3.html"><h3>Previous:</h3> Portfolio Website</a>
-                </div>
+                </div> -->
                   
                 <div class="next-project">
-                    <a href="single-project-2.html"><h3>Next:</h3> Paws & Perfection Pet Retreat</a>
+                    <a href="project-3.html"><h3>Next:</h3> Portfolio Website</a>
                 </div>
             </div>
 
