--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="gallery">
                     <div class="project" id="project-1">
                         <a href="project-1.html">
-                            <img src="./images/sm-home-desktop.png" alt="project image" loading="lazy">
+                            <img src="./images/database/SingleMovie-Desktop.png" alt="project image" loading="lazy">
                             <p>
                                 <i class="devicon-react-original-wordmark"></i>
                                 <i class="devicon-sass-original colored"></i>
