--- a/project-1.html
+++ b/project-1.html
@@ -75,22 +75,19 @@
             <div class="swiper-project">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="./images/sm-home-desktop.png" alt="Desktop home" class="desktop">
+                        <img src="./images/database/HomePage-Desktop.png" alt="Desktop home" class="desktop">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/sm-single-desktop.png" alt="Desktop single movie" class="desktop">
+                        <img src="./images/database/MovieList-Desktop.png" alt="Desktop movie list" class="desktop">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/sm-fav-desktop.png" alt="Desktop favorites" class="desktop">
+                        <img src="./images/database/Favorites-Desktop.png" alt="Desktop favorites" class="desktop">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/sm-home-mobile.png" alt="Mobile home" class="mobile">
+                        <img src="./images/database/SearchResults-Desktop.png" alt="Desktop search results" class="desktop">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/sm-single-mobile.png" alt="Mobile single movie" class="mobile">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/sm-fav-mobile.png" alt="Mobile favorites" class="mobile">
+                        <img src="./images/database/SingleMovie-Desktop.png" alt="Desktop single movie" class="desktop">
                     </div>
                 </div>
             </div>
